[package]
authors = ['Minterest <https://github.com/minterest-defi>']
edition = '2018'
license = 'Unlicense'
name = 'node-minterest-runtime'
repository = 'https://github.com/minterest-defi/minterest-chain-node/'
version = '0.6.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = "3.0.0"

# alias "parity-scale-codec" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
static_assertions = "1.1.0"
hex-literal = { optional = true, version = '0.3.1' }
serde = { features = ['derive'], optional = true, version = '1.0.101' }
frame-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-executive = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
frame-system-benchmarking = { default-features = false, optional = true, version = '3.0.0' }
frame-system-rpc-runtime-api = { default-features = false, version = '3.0.0' }
pallet-aura = { default-features = false, version = '3.0.0' }
pallet-balances = { default-features = false, version = '3.0.0' }
pallet-grandpa = { default-features = false, version = '3.0.0' }
pallet-membership = { default-features = false, version = "3.0.0" }
pallet-collective = { default-features = false, version = "3.0.0" }
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0' }
pallet-sudo = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
pallet-transaction-payment = { default-features = false, version = '3.0.0' }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, version = '3.0.0' }
sp-api = { default-features = false, version = '3.0.0' }
sp-io = { version = "3.0.0", default-features = false }
sp-block-builder = { default-features = false, version = '3.0.0' }
sp-consensus-aura = { default-features = false, version = '0.9.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-inherents = { default-features = false, version = '3.0.0' }
sp-offchain = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-session = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
sp-transaction-pool = { default-features = false, version = '3.0.0' }
sp-version = { default-features = false, version = '3.0.0' }

# local dependencies
mnt-token = { path = "../pallets/mnt-token", default-features = false }
minterest-protocol = { path = "../pallets/minterest-protocol", default-features = false }
minterest-primitives = { path = "../primitives", default-features = false }
liquidity-pools = { path = "../pallets/liquidity-pools", default-features = false }
pallet-traits = { path = "../pallets/traits", default-features = false }
integration-tests = { path = "../pallets/integration-tests", default-features = false }
controller = { path = "../pallets/controller", default-features = false }
controller-rpc-runtime-api = { path = "../pallets/controller/rpc/runtime-api", default-features = false }
module-prices = { path = "../pallets/prices", default-features = false }
minterest-model = { path = "../pallets/minterest-model", default-features = false }
risk-manager = { path = "../pallets/risk-manager", default-features = false }
liquidation-pools = { path = "../pallets/liquidation-pools", default-features = false }
dex = { path = "../pallets/dex", default-features = false }

# ORML dependencies
orml-currencies = { path = "../orml/currencies", default-features = false }
orml-tokens = { path = "../orml/tokens", default-features = false }
orml-traits = { path = "../orml/traits", default-features = false }
orml-oracle = { path = "../orml/oracle", default-features = false }
orml-oracle-rpc-runtime-api = { path = "../orml/oracle/rpc/runtime-api", default-features = false }
orml-benchmarking = { path = "../orml/benchmarking", default-features = false, optional = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "orml-benchmarking",
    'frame-benchmarking',
    'hex-literal',
    'frame-support/runtime-benchmarks',
    'frame-system/runtime-benchmarks',
    "pallet-collective/runtime-benchmarks",
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'serde',

    'sp-core/std',
    "sp-io/std",
    'sp-runtime/std',
    'sp-std/std',
    'sp-version/std',

    "frame-benchmarking/std",
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    "pallet-membership/std",
    "pallet-collective/std",
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-session/std',
    'sp-transaction-pool/std',

    'orml-currencies/std',
    'orml-tokens/std',
    'orml-traits/std',
    "orml-oracle-rpc-runtime-api/std",
    "orml-oracle/std",
    "orml-benchmarking/std",

    'mnt-token/std',
    'minterest-protocol/std',
    'minterest-primitives/std',
    'liquidity-pools/std',
    'pallet-traits/std',
    'integration-tests/std',
    'controller/std',
    'controller-rpc-runtime-api/std',
    'module-prices/std',
    'minterest-model/std',
    'risk-manager/std',
    'liquidation-pools/std',
    'dex/std',
]
