[package]
name = "minterest-service"
version = "0.5.0"
authors = ["Minterest developers"]
edition = "2018"

[dependencies]
hex-literal = "0.3.1"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8"}

sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

# local dependencies
minterest-rpc = { path = "../rpc" }
controller = { path = "../pallets/controller" }
liquidity-pools = { path = "../pallets/liquidity-pools" }
liquidation-pools = { path = "../pallets/liquidation-pools" }
minterest-model = { path = "../pallets/minterest-model" }
risk-manager = { path = "../pallets/risk-manager" }
module-vesting = { path = "../pallets/vesting" }
minterest-primitives = { path = "../primitives" }

node-minterest-runtime = { path = "../runtime" }

[features]
default = ["std"]
std = []
runtime-benchmarks = [
    "node-minterest-runtime/runtime-benchmarks",
]
