[package]
name = "test-engine"
version = "0.0.1"
authors = ["Minterest developers"]
edition = "2018"

[dependencies]
frame-support = {  version = '3.0.0' }
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

sp-core = { version = '3.0.0' }
sp-io = { version = '3.0.0' }

pallet-balances = { version = '3.0.0' }

# local dependencies
mnt-token = { path = "../pallets/mnt-token", default-features = false }
minterest-protocol = { path = "../pallets/minterest-protocol", default-features = false }
minterest-primitives = { path = "../primitives", default-features = false }
minterest-model = { path = "../pallets/minterest-model", default-features = false }
liquidity-pools = { path = "../pallets/liquidity-pools", default-features = false }
pallet-traits = { path = "../pallets/traits", default-features = false }
controller = { path = "../pallets/controller", default-features = false }
module-prices = { path = "../pallets/prices", default-features = false }
prices-rpc-runtime-api = { path = "../pallets/prices/rpc/runtime-api", default-features = false }
risk-manager = { path = "../pallets/risk-manager", default-features = false }
liquidation-pools = { path = "../pallets/liquidation-pools", default-features = false }
dex = { path = "../pallets/dex", default-features = false }
module-vesting = { path = "../pallets/vesting", default-features = false }
whitelist-module = { path = "../pallets/whitelist" , default-features = false}
test-helper = { path = "../test-helper" , default-features = false}
# ORML dependencies
orml-currencies = { version = "0.4.0", default-features = false }
orml-tokens = { version = "0.4.0", default-features = false }
orml-traits = { version = "0.4.0", default-features = false }
orml-oracle = { version = "0.4.0", default-features = false }

[features]
default = ["std"]
std = [
    "minterest-primitives/std",
    "serde",
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    "sp-runtime/std",
    "sp-std/std",
]
