[package]
name = "test-helper"
version = "0.6.2"
authors = ["Minterest developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
minterest-primitives = { path = "../primitives" }
frame-support = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5" }

[features]
default = ["std"]
std = [
    "minterest-primitives/std",
    "frame-support/std",
]
