[package]
name = "accounts"
description = 'Pallet for managing accounts and access rights in the project'
version = "0.1.0"
authors = ['Minterest <https://github.com/minterest-defi>']
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }

[dev-dependencies]

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
