[package]
name = "chainlink-price-adapter"
version = "0.6.0"
authors = ["Minterest Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

orml-traits = { version = "0.4.0", default-features = false }
minterest-primitives = { path = "../../primitives", default-features = false }

# Temporary use adapted fork, until we update the substrate
pallet-chainlink-feed = { git = "https://github.com/kurotych/chainlink-polkadot", default-features = false }

[dev-dependencies]
sp-core = "3.0.0"
sp-io = "3.0.0"
test-helper = { path = "../../test-helper" }
pallet-balances = { version = "3.0.0" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",

	"pallet-chainlink-feed/std",
]
