[package]
name = "chainlink-price-manager"
version = "0.6.0"
authors = ["Minterest Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }

pallet-chainlink-feed = { git = "https://github.com/smartcontractkit/chainlink-polkadot", default-features = false }

[dev-dependencies]
sp-core = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8"} 
sp-io = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8"} 
test-helper = { path = "../../test-helper" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.8" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",

	"pallet-chainlink-feed/std",
]
