[package]
name = "controller"
version = "0.6.2"
authors = ["Minterest <https://github.com/minterest-defi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

orml-traits = { path = "../../orml/traits", default-features = false }
orml-utilities = { path = "../../orml/utilities", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }
minterest-model = { path = "../minterest-model", default-features = false }
liquidity-pools = { path = "../liquidity-pools", default-features = false }
pallet-traits = { path = "../traits", default-features = false }

[dev-dependencies]
sp-core = { version = "3.0.0" }
sp-io = { version = "3.0.0" }

orml-tokens = { path = "../../orml/tokens" }
orml-currencies = { path = "../../orml/currencies" }

liquidity-pools = { path = "../liquidity-pools" }
minterest-model = { path = "../minterest-model" }
test-helper = { path = "../../test-helper" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",

    "frame-support/std",
    "frame-system/std",

    "orml-traits/std",
    "orml-utilities/std",

    "minterest-primitives/std",
    "minterest-model/std",
    "liquidity-pools/std",
    "pallet-traits/std",
]
