[package]
name = "controller"
version = "0.6.2"
authors = ["Minterest developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-io = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }

frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }

orml-traits = { version = "0.4.0", default-features = false }
orml-utilities = { version = "0.4.0", default-features = false }

minterest-primitives = { path = "../../primitives", default-features = false }
liquidity-pools = { path = "../liquidity-pools", default-features = false }
pallet-traits = { path = "../traits", default-features = false }

[dev-dependencies]
sp-core = { version = "3.0.0" }
sp-io = { version = "3.0.0" }
pallet-balances = { version = "3.0.0" }

orml-tokens = { version = "0.4.0" }
orml-currencies = { version = "0.4.0" }

liquidity-pools = { path = "../liquidity-pools" }
minterest-model = { path = "../minterest-model" }
test-helper = { path = "../../test-helper" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",

    "frame-support/std",
    "frame-system/std",

    "orml-traits/std",
    "orml-utilities/std",

    "minterest-primitives/std",
    "liquidity-pools/std",
    "pallet-traits/std",
]
